RESOLVED FIXED256072
Web Inspector: Crash when inspecting CSS Grid without defined columns or rows
https://bugs.webkit.org/show_bug.cgi?id=256072
Summary Web Inspector: Crash when inspecting CSS Grid without defined columns or rows
Patrick Angle
Reported 2023-04-27 20:59:37 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-27 20:59:59 PDT
Patrick Angle
Comment 2 2023-04-27 21:04:20 PDT
EWS
Comment 3 2023-04-28 14:13:06 PDT
Committed 263517@main (05e01b57a4ec): <https://commits.webkit.org/263517@main> Reviewed commits have been landed. Closing PR #13260 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.