Cherry-pick 05e01b57a4ec. rdar://problem/108745762

Web Inspector: Crash when inspecting CSS Grid without defined columns or rows
    https://bugs.webkit.org/show_bug.cgi?id=256072
    rdar://108641874

    Reviewed by Devin Rousso.

    262869@main fixed issues with determining the authored grid track sizes, but in the process introduced a potential null
    pointer deref due to us erroneously trying to get a reference to a RefPtr's value instead of getting its pointer for use
    in a dynamic downcast.

    * LayoutTests/inspector/dom/showFlexOverlay.html:
    - Drive-by ensure we enable all options for flex overlays too so that those paths are exercises.

    * LayoutTests/inspector/dom/showGridOverlay.html:
    * Source/WebCore/inspector/InspectorOverlay.cpp:
    (WebCore::authoredGridTrackSizes):

    Canonical link: https://commits.webkit.org/263517@main
Identifier: 263289.9@safari-7616.1.12-branch